--- a/src/client/resources/visual-snowy-leaves.mixins.json
+++ b/src/client/resources/visual-snowy-leaves.mixins.json
@@ -1,13 +1,17 @@
 {
-    "required": true,
-    "package": "io.github.startsmercury.visual_snowy_leaves.mixin.client",
-    "compatibilityLevel": "JAVA_17",
-    "client": [
-        "ModelBlockRendererMixin",
-        "RenderChunkRegionAccessor",
-        "TerrainParticleMixin"
-    ],
-    "injectors": {
-        "defaultRequire": 1
-    }
+  "required": true,
+  "package": "io.github.startsmercury.visual_snowy_leaves.mixin.client",
+  "compatibilityLevel": "JAVA_17",
+  "client": [
+    "BlockColorsAccessor",
+    "ModelBakeryMixin",
+    "ModelBlockRendererMixin",
+    "ModelManagerMixin",
+    "RenderChunkRegionAccessor",
+    "SpriteContentsAccessor",
+    "TerrainParticleMixin"
+  ],
+  "injectors": {
+    "defaultRequire": 1
+  }
 }
