--- a/src/client/resources/visual-snowy-leaves.mixins.json
+++ b/src/client/resources/visual-snowy-leaves.mixins.json
@@ -3,15 +3,16 @@
     "package": "io.github.startsmercury.visual_snowy_leaves.mixin.client",
     "compatibilityLevel": "JAVA_17",
     "client": [
-        "minecraft.BlockColorsAccessor",
-        "minecraft.ModelBakeryMixin",
-        "minecraft.ModelBlockRendererMixin",
-        "minecraft.ModelManagerMixin",
-        "minecraft.RenderChunkRegionAccessor",
-        "minecraft.SpriteContentsAccessor",
-        "minecraft.TerrainParticleMixin",
-        "sodium.BlockRendererMixin",
-        "sodium.WorldSliceAccessor"
+        "core.tint.BlockColorsAccessor",
+        "core.tint.ModelBakeryMixin",
+        "core.tint.ModelManagerMixin",
+        "core.tint.SpriteContentsAccessor",
+        "core.transition.minecraft.ClientChunkCache$StorageAccessor",
+        "core.transition.minecraft.ClientChunkCacheAccessor",
+        "core.transition.minecraft.ClientLevelMixin",
+        "core.transition.minecraft.LevelReaderMixin",
+        "core.transition.minecraft.RenderChunkRegionMixin",
+        "core.transition.sodium.WorldSliceMixin"
     ],
     "injectors": {
         "defaultRequire": 1
