--- a/src/client/resources/visual-snowy-leaves.mixins.json
+++ b/src/client/resources/visual-snowy-leaves.mixins.json
@@ -4,6 +4,7 @@
     "compatibilityLevel": "JAVA_17",
     "client": [
         "core.tint.BlockColorsAccessor",
+        "core.tint.ModelBakeryAccessor",
         "core.tint.ModelBakeryMixin",
         "core.tint.ModelManagerMixin",
         "core.tint.SpriteContentsAccessor",
@@ -11,6 +12,7 @@
         "core.transition.minecraft.ClientChunkCacheAccessor",
         "core.transition.minecraft.ClientLevelMixin",
         "core.transition.minecraft.LevelReaderMixin",
+        "core.transition.minecraft.MinecraftMixin",
         "core.transition.minecraft.RenderChunkRegionMixin",
         "core.transition.sodium.WorldSliceMixin"
     ],
