Moved mixin classes to a subpackage higher

--- a/src/client/resources/visual-snowy-leaves.mixins.json
+++ b/src/client/resources/visual-snowy-leaves.mixins.json
@@ -3,18 +3,18 @@
     "package": "io.github.startsmercury.visual_snowy_leaves.mixin.client",
     "compatibilityLevel": "JAVA_17",
     "client": [
-        "core.tint.BlockColorsAccessor",
-        "core.tint.ModelBakeryAccessor",
-        "core.tint.ModelBakeryMixin",
-        "core.tint.ModelManagerMixin",
-        "core.tint.SpriteContentsAccessor",
-        "core.transition.minecraft.ClientChunkCache$StorageAccessor",
-        "core.transition.minecraft.ClientChunkCacheAccessor",
-        "core.transition.minecraft.ClientLevelMixin",
-        "core.transition.minecraft.LevelReaderMixin",
-        "core.transition.minecraft.MinecraftMixin",
-        "core.transition.minecraft.RenderChunkRegionMixin",
-        "core.transition.sodium.WorldSliceMixin"
+        "extension.MinecraftMixin",
+        "tint.BlockColorsAccessor",
+        "tint.ModelBakeryAccessor",
+        "tint.ModelBakeryMixin",
+        "tint.ModelManagerMixin",
+        "tint.SpriteContentsAccessor",
+        "transition.minecraft.ClientChunkCache$StorageAccessor",
+        "transition.minecraft.ClientChunkCacheAccessor",
+        "transition.minecraft.ClientLevelMixin",
+        "transition.minecraft.LevelReaderMixin",
+        "transition.minecraft.RenderChunkRegionMixin",
+        "transition.sodium.WorldSliceMixin"
     ],
     "injectors": {
         "defaultRequire": 1
