--- a/src/client/resources/visual-snowy-leaves.mixins.json
+++ b/src/client/resources/visual-snowy-leaves.mixins.json
@@ -5,6 +5,7 @@
     "client": [
         "extension.MinecraftMixin",
         "tint.BlockColorsAccessor",
+        "tint.BlockStateModelLoaderMixin",
         "tint.ModelBakeryAccessor",
         "tint.ModelBakeryMixin",
         "tint.ModelManagerMixin",
@@ -14,7 +15,7 @@
         "transition.minecraft.ClientLevelMixin",
         "transition.minecraft.LevelReaderMixin",
         "transition.minecraft.RenderChunkRegionMixin",
-        "transition.sodium.WorldSliceMixin"
+        "transition.sodium.LevelSliceMixin"
     ],
     "injectors": {
         "defaultRequire": 1
