Update to Minecraft 1.21.4-rc1

--- a/src/client/resources/visual-snowy-leaves.mixins.json
+++ b/src/client/resources/visual-snowy-leaves.mixins.json
@@ -5,8 +5,7 @@
     "client": [
         "extension.MinecraftMixin",
         "tint.BlockColorsAccessor",
-        "tint.BlockStateModelLoaderMixin",
-        "tint.ModelBakeryAccessor",
+        "tint.BlockModelInvoker",
         "tint.ModelManagerMixin",
         "tint.SpriteContentsAccessor",
         "transition.minecraft.ClientChunkCache$StorageAccessor",
